# DexDiff

./: settings.gradle
FcxinVoice/: import-summary.txt  local.properties
FcxinVoice/app/: build.gradle
FcxinVoice/app/src/main/: AndroidManifest.xml
FcxinVoice/app/src/main/assets/: userwords
FcxinVoice/app/src/main/res/drawable/: listview_selectbg_item.xml  speech_selector.xml
FcxinVoice/app/src/main/res/layout/: activity_main.xml  add_popup_dialog.xml  custom_title.xml  device_list1.xml  device_name1.xml  iat_setting.xml
FcxinVoice/app/src/main/res/menu/: option_menu.xml
FcxinVoice/app/src/main/res/values/: colors.xml  strings.xml
FcxinVoice/app/src/main/res/values-en/: strings.xml
FcxinVoice/app/src/main/res/values-v11/: styles.xml
FcxinVoice/app/src/main/res/values-v14/: styles.xml
app/: build.gradle
app/src/androidTest/java/com/example/view_day_03/: ExampleInstrumentedTest.java
app/src/androidTest/java/com/tq/dexdiff/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  bspatch.c  native-lib.cpp
app/src/main/java/com/example/view_day_03/: MainActivity.java  QQStepView.java
app/src/main/java/com/tq/dexdiff/: BsPatchUtils.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: attrs.xml  strings.xml
app/src/test/java/com/example/view_day_03/: ExampleUnitTest.java
app/src/test/java/com/tq/dexdiff/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
image/: Dex格式解析与增量更新.md
relative_files/: new.apk  old.apk  patch.apk
(+11 files in other folders)
